// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateOptionsFromApps should return a list of categories options for a select input based on the apps list 1`] = `
Array [
  Object {
    "label": "Partners",
    "secondary": false,
    "type": "webapp",
    "value": "partners",
  },
  Object {
    "label": "The essentials",
    "secondary": false,
    "type": "webapp",
    "value": "cozy",
  },
  Object {
    "label": "Others",
    "secondary": false,
    "type": "webapp",
    "value": "others",
  },
  Object {
    "label": "Services",
    "secondary": false,
    "value": "konnectors",
  },
  Object {
    "label": "ISP",
    "secondary": true,
    "type": "konnector",
    "value": "isp",
  },
  Object {
    "label": "Telecom",
    "secondary": true,
    "type": "konnector",
    "value": "telecom",
  },
  Object {
    "label": "Transportation",
    "secondary": true,
    "type": "konnector",
    "value": "transport",
  },
]
`;

exports[`generateOptionsFromApps should return an empty list if empty apps list provided 1`] = `Array []`;

exports[`generateOptionsFromApps should return an empty list if no apps provided 1`] = `Array []`;

exports[`generateOptionsFromApps should return include the all categories if includeAll option true 1`] = `
Array [
  Object {
    "secondary": false,
    "value": "all",
  },
  Object {
    "label": "Partners",
    "secondary": false,
    "type": "webapp",
    "value": "partners",
  },
  Object {
    "label": "The essentials",
    "secondary": false,
    "type": "webapp",
    "value": "cozy",
  },
  Object {
    "label": "Others",
    "secondary": false,
    "type": "webapp",
    "value": "others",
  },
  Object {
    "label": "Services",
    "secondary": false,
    "value": "konnectors",
  },
  Object {
    "label": "ISP",
    "secondary": true,
    "type": "konnector",
    "value": "isp",
  },
  Object {
    "label": "Telecom",
    "secondary": true,
    "type": "konnector",
    "value": "telecom",
  },
  Object {
    "label": "Transportation",
    "secondary": true,
    "type": "konnector",
    "value": "transport",
  },
]
`;

exports[`groupApps should return apps sorted in a dictionnary by categories 1`] = `
Object {
  "cozy": Array [
    Object {
      "categories": Array [
        "cozy",
      ],
      "developer": Object {
        "name": "Cozy",
      },
      "editor": "Cozy",
      "icon": "<svg></svg>",
      "installed": true,
      "isInRegistry": true,
      "label": 1,
      "name": "Collect",
      "name_prefix": "Cozy",
      "permissions": Object {
        "mock": Object {
          "type": "io.mock.doctype",
        },
        "mock2": Object {
          "type": "io.mock.doctype2",
        },
      },
      "related": "http://collect.cozy.mock/",
      "slug": "collect",
      "tags": Array [
        "konnector",
        "collect",
        "bills",
        "providers",
        "files",
      ],
      "type": "webapp",
      "uninstallable": false,
      "version": "3.0.0",
      "versions": Object {
        "beta": Array [
          "3.0.0",
        ],
        "dev": Array [
          "3.0.0",
        ],
        "stable": Array [
          "3.0.0",
        ],
      },
    },
    Object {
      "categories": Array [
        "cozy",
      ],
      "developer": Object {
        "name": "Cozy",
      },
      "editor": "Cozy",
      "icon": "<svg></svg>",
      "installed": true,
      "name": "Drive",
      "name_prefix": "Cozy",
      "permissions": Object {
        "mock2": Object {
          "type": "io.mock.doctype2",
        },
      },
      "related": "http://drive.cozy.mock/",
      "slug": "drive",
      "tags": Array [
        "search",
        "files",
        "folders",
      ],
      "type": "webapp",
      "uninstallable": false,
      "version": "3.0.0-beta89bnhj3993",
    },
    Object {
      "categories": Array [
        "cozy",
      ],
      "developer": Object {
        "name": "Cozy",
      },
      "editor": "Cozy",
      "icon": "<svg></svg>",
      "isInRegistry": true,
      "locales": Object {
        "en": Object {
          "long_description": "A long description finally short",
        },
      },
      "name": "Photos",
      "name_prefix": "Cozy",
      "slug": "photos",
      "type": "webapp",
      "uninstallable": true,
      "versions": Object {
        "beta": Array [
          "3.0.0",
        ],
        "dev": Array [
          "3.0.0",
        ],
        "stable": Array [
          "3.0.0",
        ],
      },
    },
  ],
  "isp": Array [
    Object {
      "categories": Array [
        "isp",
        "telecom",
      ],
      "developer": Object {
        "name": "Cozy",
      },
      "icon": "<svg></svg>",
      "isInRegistry": true,
      "name": "Bouilligue",
      "slug": "konnector-bouilligue",
      "type": "konnector",
      "uninstallable": true,
      "versions": Object {
        "beta": Array [
          "0.1.0",
        ],
        "dev": Array [
          "0.1.0",
        ],
        "stable": Array [
          "0.1.0",
        ],
      },
    },
  ],
  "others": Array [
    Object {
      "categories": Array [
        "others",
      ],
      "developer": Object {
        "name": "Cozy",
      },
      "editor": "Cozy",
      "icon": "<svg></svg>",
      "isInRegistry": true,
      "locales": Object {
        "name": "For Dev Only",
      },
      "name": "DevOnly",
      "slug": "devonly",
      "type": "webapp",
      "uninstallable": true,
      "versions": Object {
        "beta": Array [],
        "dev": Array [
          "1.0.0-betaojdkehy989ekhflldh",
        ],
        "stable": Array [],
      },
    },
  ],
  "partners": Array [
    Object {
      "availableVersion": "3.0.0",
      "categories": Array [
        "partners",
      ],
      "icon": "<svg></svg>",
      "installed": true,
      "isInRegistry": true,
      "name": "Tasky",
      "slug": "tasky",
      "type": "webapp",
      "uninstallable": true,
      "versions": Object {
        "beta": Array [
          "3.0.0",
          "1.0.0",
        ],
        "dev": Array [
          "3.0.0",
          "1.0.0",
        ],
        "stable": Array [
          "3.0.0",
          "1.0.0",
        ],
      },
    },
  ],
  "telecom": Array [
    Object {
      "categories": Array [
        "isp",
        "telecom",
      ],
      "developer": Object {
        "name": "Cozy",
      },
      "icon": "<svg></svg>",
      "isInRegistry": true,
      "name": "Bouilligue",
      "slug": "konnector-bouilligue",
      "type": "konnector",
      "uninstallable": true,
      "versions": Object {
        "beta": Array [
          "0.1.0",
        ],
        "dev": Array [
          "0.1.0",
        ],
        "stable": Array [
          "0.1.0",
        ],
      },
    },
  ],
  "transport": Array [
    Object {
      "categories": Array [
        "transport",
      ],
      "developer": Object {
        "name": "Cozy",
      },
      "icon": "<svg></svg>",
      "installed": true,
      "isInRegistry": true,
      "name": "Trinlane",
      "permissions": Object {
        "mock": Object {
          "type": "io.mock.doctype",
        },
      },
      "slug": "konnector-trinlane",
      "tags": Array [
        "transport",
        "files",
        "bills",
      ],
      "type": "konnector",
      "uninstallable": true,
      "version": "0.1.0",
      "versions": Object {
        "beta": Array [
          "0.1.0",
        ],
        "dev": Array [
          "0.1.0",
        ],
        "stable": Array [
          "0.1.0",
        ],
      },
    },
  ],
}
`;

exports[`sorter should return a categories list alphabetically except for all and others 1`] = `
Array [
  "all",
  "isp",
  "telecom",
  "cozy",
  "others",
]
`;

exports[`sorter should return a categories list alphabetically except for all and others 2`] = `
Array [
  "all",
  "telecom",
  "cozy",
  "others",
]
`;
